--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest",
+    "test": "jest --config ./jest.config.js",
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@aws-sdk/lib-dynamodb": "^3.758.0",
+    "@types/aws-lambda": "^8.10.147",
     "@types/jest": "^29.5.2",
     "@types/node": "18.16.1",
+    "@types/uuid": "^10.0.0",
     "aws-cdk": "2.86.0",
+    "aws-sdk-client-mock": "^4.1.0",
     "esbuild": "^0.18.11",
+    "install": "^0.13.0",
     "jest": "^29.6.1",
+    "npm": "^11.1.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "uuid": "^11.1.0"
   },
   "dependencies": {
     "aws-cdk-lib": "2.86.0",
