--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@aws-sdk/client-cloudformation": "^3.758.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.760.0",
+    "@aws-sdk/client-secrets-manager": "^3.758.0",
     "@aws-sdk/lib-dynamodb": "^3.758.0",
+    "@faker-js/faker": "^9.5.1",
     "@types/aws-lambda": "^8.10.147",
     "@types/jest": "^29.5.2",
     "@types/node": "18.16.1",
     "@types/uuid": "^10.0.0",
     "aws-cdk": "2.86.0",
     "aws-sdk-client-mock": "^4.1.0",
+    "axios": "^1.8.1",
     "esbuild": "^0.18.11",
     "install": "^0.13.0",
     "jest": "^29.6.1",
